@@ -57,7 +57,19 @@ const httpserver = http.createServer((req, res) => {
     var xip = req.headers['x-forwarded-for'];
     res.writeHead(204, { 'X-IP': xip?xip:res.socket.remoteAddress });
     res.end('');
-
+  } else if (req.url.startsWith("/cdn/gettlsticketkeys")) {
+    if (cdnboxStates.tlsticketkeys !== undefined) {
+      res.writeHead(200, { 'Content-Type': 'text/plain; charset=UTF-8', 'Cache-Control': 'no-cache' });
+      const key = crypto.scryptSync(cdnboxStates.config.clustersecret, 'zarbi', 16);
+      const iv = crypto.randomBytes(16);
+      const cipher = crypto.createCipheriv('aes-128-cbc', key, iv);
+      let encrypted = cipher.update(JSON.stringify(cdnboxStates.tlsticketkeys), 'utf8', 'hex');
+      encrypted += cipher.final('hex');
+      res.write(JSON.stringify( { "encrypted": encrypted, "iv": iv } ));
+    } else {
+      res.writeHead(404, { 'Content-Type': 'text/plain; charset=UTF-8', 'Cache-Control': 'no-cache' });
+    }
+    res.end('');
   // acces limite.
   } else if (req.url.startsWith("/cdn/cdnboxStates") || req.url.startsWith("/cdn/config") ||
              req.url.startsWith("/cdn/cdnboxes") || req.url.startsWith("/cdn/console") ||
