@@ -158,6 +158,12 @@ cdnboxStates.init = async function (DNSserverclass, choose) {
   } catch (err) {
     logerror('"error": "Whoami failed !! ' + err);
   }
+  if (lconfig.tlsticketkeys !==  undefined) {
+    if (lconfig.tlsticketkeys.ttl ===  undefined) { lconfig.tlsticketkeys.ttl = 86400000; }
+    if (lconfig.tlsticketkeys.refresh ===  undefined) { lconfig.tlsticketkeys.refresh = 3600000; }
+    inittlsticketkeys();
+    updatetlsticketkeys();
+  }
 
   // initialisation cdnboxStates
   cdnboxStates.subscribestate = {};
@@ -434,6 +440,127 @@ function getwhoami() {
         });
       }
     }
+  });
+}
+
+// inittlsticketkeys
+function inittlsticketkeys() {
+    var lconfig = cdnboxStates.config;
+    // if no one answer within 35 seconds, builds new keys
+    setTimeout(() => {
+        if (cdnboxStates.tlsticketkeys === undefined) {
+          var tlsdateref = Math.floor(Date.now() / lconfig.tlsticketkeys.ttl) * lconfig.tlsticketkeys.ttl;
+          cdnboxStates.tlsticketkeys = [];
+          cdnboxStates.tlsticketkeys[0] = { "key": crypto.randomBytes(48).toString('base64'), "timestamp": tlsdateref - 2 * lconfig.tlsticketkeys.ttl };
+          cdnboxStates.tlsticketkeys[1] = { "key": crypto.randomBytes(48).toString('base64'), "timestamp": tlsdateref - lconfig.tlsticketkeys.ttl };
+          cdnboxStates.tlsticketkeys[2] = { "key": crypto.randomBytes(48).toString('base64'), "timestamp": tlsdateref };
+          writetlsticketkeys();
+          console.error("tlsticketkeys with no answer. Generating new keys.");
+        }
+    }, 35000);
+    // try to get keys from another node.
+    var options = { 'path': '/cdn/gettlsticketkeys', 'family': 4, agent: false };
+    for (var i = 0; i < lconfig.cdnboxes.length; i++) {
+      if (lconfig.cdnboxes[i].isns) {
+        options.protocol = lconfig.cdnboxes[i].proto;
+        options.hostname = lconfig.cdnboxes[i].hostname;
+        var getter = (options.protocol == "http:"?http:https);
+        getter.get(options, function () {
+          var cdnboxname = lconfig.cdnboxes[i].name;
+          return function (res) {
+              res.on('data', (d) => {
+                if (cdnboxStates.tlsticketkeys === undefined && (res.statusCode === 200)) {
+                  try {
+                    decodeparsewritetlsticketkeys(d);
+                    logerror('"error": "tlsticketkeys set from: ' + cdnboxname + '"');
+                  } catch (e) {
+                    logerror('"error": "tlsticketkeys parsing error from: ' + cdnboxname + e.toString().replace(/"/g,'') + '"');
+                  }
+                }
+              });
+          }
+        }())
+        .on('error', (e) => {
+          console.error('"error gettlsticketkeys": "' + e.toString().replace(/"/g,'') + '"');
+          logerror('"error": "gettlsticketkeys: ' + e.toString().replace(/"/g,'') + '"');
+        });
+      }
+    }
+}
+
+function updatetlsticketkeys() {
+    var options = { 'path': '/cdn/gettlsticketkeys', 'family': 4, agent: false };
+    var lconfig = cdnboxStates.config;
+    setInterval(async function () {
+        var notupdated = true;
+        for (var i = 0; i < lconfig.cdnboxes.length && notupdated; i++) {
+          if (lconfig.cdnboxes[i].isns && cdnboxStates[lconfig.cdnboxes[i].name].status === 'on') {
+            if (lconfig.cdnboxes[i].name == cdnboxStates.local.config.name) {
+              // no one answers before me. I had to update keys myself
+              notupdated = false;
+              if (cdnboxStates.tlsticketkeys[2].timestamp < Date.now() - lconfig.tlsticketkeys.ttl) {
+                cdnboxStates.tlsticketkeys[0] = cdnboxStates.tlsticketkeys[1];
+                cdnboxStates.tlsticketkeys[1] = cdnboxStates.tlsticketkeys[2];
+                cdnboxStates.tlsticketkeys[2] = { "key": crypto.randomBytes(48).toString('base64'),
+                    "timestamp": Math.floor(Date.now() / lconfig.tlsticketkeys.ttl) * lconfig.tlsticketkeys.ttl };
+                writetlsticketkeys();
+                logerror('"error": "tlsticketkeys: master ' + lconfig.cdnboxes[i].name + ' updating keys."');
+              }
+            } else {
+              // try to get keys from another node.
+              await new Promise((resolve, reject) => {
+                  options.protocol = lconfig.cdnboxes[i].proto;
+                  options.hostname = lconfig.cdnboxes[i].hostname;
+                  var getter = (options.protocol == "http:"?http:https);
+                  getter.get(options, function () {
+                    return function (res) {
+                        res.on('data', (d) => {
+                          if (res.statusCode === 200) {
+                            try {
+                              decodeparsewritetlsticketkeys(d);
+                              logerror('"error": "tlsticketkeys refreshed from ' + lconfig.cdnboxes[i].name + '"');
+                              notupdated = false;
+                              resolve();
+                            } catch (e) {
+                              logerror('"error": "tlsticketkeys parsing error from: ' + lconfig.cdnboxes[i].name + e.toString().replace(/"/g,'') + '"');
+                              reject();
+                            }
+                          } else {
+                            logerror('"error": "tlsticketkeys status ' + res.statusCode + ' from ' + lconfig.cdnboxes[i].name + '"');
+                            reject();
+                          }
+                        });
+                    }
+                  }())
+                  .on('error', (e) => {
+                    console.error('"error gettlsticketkeys": "' + e.toString().replace(/"/g,'') + '"');
+                    logerror('"error": "gettlsticketkeys: ' + e.toString().replace(/"/g,'') + '"');
+                    reject();
+                  });
+              }).catch((e) => { });
+            }
+          }
+        }
+    }, lconfig.tlsticketkeys.refresh);
+}
+
+function decodeparsewritetlsticketkeys(d) {
+//ici
+
+  // Use the async `crypto.scrypt()` instead.
+  const key = crypto.scryptSync(cdnboxStates.config.clustersecret, 'zarbi', 16);
+  var buff = JSON.parse(d);
+  const decipher = crypto.createDecipheriv('aes-128-cbc', key, Buffer.from(buff.iv.data));
+  let decrypted = decipher.update(buff.encrypted, 'hex', 'utf8');
+  decrypted += decipher.final('utf8');
+  cdnboxStates.tlsticketkeys = JSON.parse(decrypted);
+  writetlsticketkeys();
+}
+
+function writetlsticketkeys() {
+  fs.writeFile(cdnboxStates.config.tlsticketkeys.filename,
+      cdnboxStates.tlsticketkeys[0].key + "\n" + cdnboxStates.tlsticketkeys[1].key + "\n" + cdnboxStates.tlsticketkeys[2].key + "\n",
+      (err) => { if (err) { logerror('"error": "tlsticketkeys write error: ' + err + '"'); }
   });
 }
 
